--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "graphql": "^16.10.0",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-spinner-overlay": "^0.1.33",
+    "recoil": "^0.7.7",
     "sass": "^1.83.0",
     "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
